ui margins and view all tutor bios

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -11,7 +11,7 @@
 
         <hr>
 
-        Created by the ECO100 Team. 
+        <div class="m-3">Created by the ECO100 Team.  </div>
 
         <hr>
 
