--- a/app/templates/student/studentview.html
+++ b/app/templates/student/studentview.html
@@ -74,7 +74,8 @@
 
         </div>
         <hr>
-                
+                <!-- Include popup container -->
+            <div id="overview-modal-container"></div>
           {% include 'schedule.html' with context %}
 
       </div>
