--- a/app/templates/headerDynamic.html
+++ b/app/templates/headerDynamic.html
@@ -17,11 +17,13 @@
           <p>Welcome, {{ user[0] }}! You are logged in as a {{ user[1] }}</p>
           {% if user[1] == "tutor" %}
           <button class="btn warm-btn edit-tutor-bio" data-tutor_netid="{{user[2]}}">View/Edit My Bio</button>
+          {% elif user[1] == "student" %}
+          <button class="btn warm-btn float-left tutor-overview-btn">View All Tutor Bios</button>
           {% endif %}
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-end">
+    <div class="d-flex justify-content-end mr-3">
       <a href="/logoutcas" class= "btn btn-danger">Log Out</a>
     </div>
   </header>
