--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -1,3 +1,5 @@
+<div class="m-3">
+    
 <h2><span style="color: black;">Schedule</span></h2>
 
 {% if user[1] == "student" %}
@@ -17,13 +19,14 @@
     <button class="btn warm-btn update-week-calendar" data-week="1" id="next-week">Next Week</button>
 </div>
 
-<hr>
+
+</div>
 
 {% for appointments_by_date in weekly_appointments %}
 
 {% set week = loop %}
 
-<div id="calendar-{{week.index0}}" style="display:none">
+<div id="calendar-{{week.index0}}" class="m-3" style="display:none">
 
 {% if user[1] == "student" and not can_book[week.index0] %}
 The calendar is currently disabled as you can only book one appointment per week.
