--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -11,7 +11,7 @@
 
         <hr>
 
-        <div class="m-3">Created by the ECO100 Team.  </div>
+        <div class="m-3">Created by the ECO100 Team. To report any issues, please contact us at princetonecotutoringapp@gmail.com.</div>
 
         <hr>
 
