--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
     <body>
         <div class="container centered">
             <h1 class="mb-4">Welcome to the ECO100 Scheduling App!</h1>
-            <p class="mb-4">Login with your Princeton email:</p>
+            <p class="mb-4">Login with your Princeton NetID:</p>
             <div class="row">
                 <div class = "col">
                 <a href="/user_type" class="btn warm-btn btn-lg btn-block" role="button">NetID Login</a>
