--- a/app/templates/admin/adminview.html
+++ b/app/templates/admin/adminview.html
@@ -42,10 +42,10 @@
                     </div>
                     <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <button class="btn warm-btn float-left prev-week-btn">Previous Week Summary</button>
-                        <button class="btn warm-btn float-left weekly-summary-btn">Current Week Summary</button>
-                        <button class="btn warm-btn float-left tutor-overview-btn">Tutor Overview</button>
-                        <button class="btn warm-btn float-left add-users-btn">Add New Users</button>
+                        <button class="btn warm-btn float-left prev-week-btn m-1">Previous Week Summary</button>
+                        <button class="btn warm-btn float-left weekly-summary-btn m-1">Current Week Summary</button>
+                        <button class="btn warm-btn float-left tutor-overview-btn m-1">Tutor Overview</button>
+                        <button class="btn warm-btn float-left add-users-btn m-1">Add New Users</button>
                     </li>
                     </ul>
                 </div>
