--- a/app/templates/tutor/add_appointment.html
+++ b/app/templates/tutor/add_appointment.html
@@ -25,7 +25,7 @@
                     <input type="time" name="time">
                     <br>
 
-                    <button class="btn warm-btn">Add Time</button>        
+                    <button class="btn warm-btn mt-3">Add Time</button>        
                 </form>        
             </div>
         </div>
