--- a/app/templates/tutor/tutorview.html
+++ b/app/templates/tutor/tutorview.html
@@ -43,15 +43,15 @@
                       <li class="list-group-item">
                           {{ time.strftime('%A, %B %d') }} at {{ time.strftime('%I:%M %p') }} with {{ names[netid] }}
                           <div class="button-group float-end">
-                              <button class="btn warm-btn float-end" onclick="window.location.href='{{ url_for('generate_ics', tutor=names[netid], time=time.strftime('%Y%m%dT%H%M%SZ')) }}'">Download iCal</button>
-                              <button class="btn warm-btn float-end view-cancel" data-tutor_netid="{{ user[2] }}" data-date="{{ time.strftime('%Y-%m-%d') }}" data-time="{{ time.strftime('%I:%M %p') }}">View/Cancel</button>
+                              <button class="btn warm-btn float-end m-1" onclick="window.location.href='{{ url_for('generate_ics', tutor=names[netid], time=time.strftime('%Y%m%dT%H%M%SZ')) }}'">Download iCal</button>
+                              <button class="btn warm-btn float-end view-cancel m-1" data-tutor_netid="{{ user[2] }}" data-date="{{ time.strftime('%Y-%m-%d') }}" data-time="{{ time.strftime('%I:%M %p') }}">View/Cancel</button>
                           </div>
                       </li>
                       {% endfor %}
                   </ul>
               </div>
           </div>
-      
+    <br>
     <p>For the following previous appointments, please confirm whether the students showed up.</p>
           <!-- No-show Appointments Block -->
     <div class="col-md-6">
