--- a/app/templates/student/studentview.html
+++ b/app/templates/student/studentview.html
@@ -26,6 +26,7 @@
         <style>
             .hover-container {
                 position: relative;
+                z-index: -1;
                 display: inline-block;
                 width: 300px;      
             }
@@ -34,7 +35,7 @@
                 position: absolute;
                 left: 0;
                 top: 100%;
-                background-color: lightgrey;
+                background-color: white;
                 padding: 5px;
                 border: 1px solid black;
             }
