--- a/app/templates/admin/tutor_overview.html
+++ b/app/templates/admin/tutor_overview.html
@@ -15,7 +15,7 @@
             <div class="modal-body">            
                 {% for tutor in names_bios %}
         
-                    {{tutor}}: {{names_bios[tutor]}}
+                    <strong>{{tutor}}:</strong> {{names_bios[tutor]}}
                     <br>
         
                 {% endfor %}        
