--- a/app/templates/student/studentview.html
+++ b/app/templates/student/studentview.html
@@ -26,13 +26,14 @@
         <style>
             .hover-container {
                 position: relative;
-                z-index: 1000;
+                z-index: 900;
                 display: inline-block;
                 width: 300px;      
             }
             .hover-text {
                 display: none;
-                position: absolute;
+                position: relative;
+                z-index: 1000;
                 left: 0;
                 top: 100%;
                 background-color: white;
@@ -41,6 +42,7 @@
             }
             .hover-container:hover .hover-text {
                 display: block;
+                z-index: 900;
             }
         </style>
     </head>
