--- a/app/templates/tutor/add_appointment.html
+++ b/app/templates/tutor/add_appointment.html
@@ -25,6 +25,11 @@
                     <input type="time" name="time">
                     <br>
 
+                    <label for="location">Location:</label>
+                    <br>
+                    <input type="text" name="location">
+                    <br>
+
                     <button class="btn warm-btn mt-3">Add Time</button>        
                 </form>        
             </div>
