Show same calendar on page refresh

--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -15,7 +15,7 @@
 {% endif %}
 
 <div>
-    <button class="btn warm-btn update-week-calendar" data-week="-1" id="prev-week" disabled>Previous Week</button>
+    <button class="btn warm-btn update-week-calendar" data-week="-1" id="prev-week">Previous Week</button>
     <button class="btn warm-btn update-week-calendar" data-week="1" id="next-week">Next Week</button>
 </div>
 
