--- a/app/templates/student/studentview.html
+++ b/app/templates/student/studentview.html
@@ -18,6 +18,7 @@
         <title>Dashboard</title>
         <!-- Bootstrap JS and jQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
         <!-- Include external JavaScript file -->
