--- a/app/templates/tutor/add_appointment.html
+++ b/app/templates/tutor/add_appointment.html
@@ -13,7 +13,7 @@
             <div class="modal-body">
                 <form action="/add_appt_submit" method="POST">
 
-                    <input type="hidden" id="tutor" name="tutor" value={{tutor}}><br>
+                    <input type="hidden" id="tutor" name="tutor" value={{tutor}}>
         
                     <label for="date">Date:</label>
                     <br>
