select appointment times

--- a/app/templates/tutor/add_appointment.html
+++ b/app/templates/tutor/add_appointment.html
@@ -1,6 +1,6 @@
 <!-- =========================================================== -->
 <!-- add_appointment.html                                        -->
-<!-- Author: Hita Gupta                                          -->
+<!-- Author: Hita Gupta & Libo Tan                               -->
 <!-- =========================================================== -->
 
 <div class="modal fade" id="addAppointmentModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
@@ -22,7 +22,27 @@
         
                     <label for="time">Time:</label>
                     <br>
-                    <input type="time" name="time">
+                    <select name="time">
+                        <!-- Generate options from 9:00 AM to 11:30 AM -->
+                        {% for hour in range(9, 12) %}
+                            {% for minute in [0, 30] %}
+                                <option value="{{ '%02d' % hour }}:{{ '%02d' % minute }}">
+                                    {{ '%02d' % hour }}:{{ '%02d' % minute }} AM
+                                </option>
+                            {% endfor %}
+                        {% endfor %}
+                        <!-- Add options for 12:00 PM to 12:30 PM -->
+                        <option value="12:00">12:00 PM</option>
+                        <option value="12:30">12:30 PM</option>
+                        <!-- Generate options from 1:00 PM (13:00) to 10:00 PM (22:00) -->
+                        {% for hour in range(13, 23) %}
+                            {% for minute in [0, 30] %}
+                                <option value="{{ '%02d' % hour }}:{{ '%02d' % minute }}">
+                                    {{ '%02d' % (hour-12) }}:{{ '%02d' % minute }} PM
+                                </option>
+                            {% endfor %}
+                        {% endfor %}
+                    </select>
                     <br>
 
                     <button class="btn warm-btn mt-3">Add Time</button>        
