--- a/app/templates/appointment_popup.html
+++ b/app/templates/appointment_popup.html
@@ -20,9 +20,14 @@
                 You can edit the date and time for this time slot below, and click "Edit Appointment" to submit your changes.
                 <br><br>
                 <form action="/edit_appointment" method="post">
-                    <label for="appt-date">Appointment Location:</label>
+                    <label for="appt-location">Appointment Location:</label>
                     <br>
                     <input type="text" name="location" value="{{appointment.get_location()}}" disabled>
+                    <br>
+
+                    <label for="student-email">Student Email: </label>
+                    <br>
+                    <input type="text" name="student_email" value="{{appointment.get_student_netid}}@princeton.edu">
                     <br>
 
                     <label for="appt-date">Appointment Date:</label>
@@ -55,6 +60,11 @@
                         <label for="appt-date">Appointment Location:</label>
                         <br>
                         <input type="text" name="location" value="{{appointment.get_location()}}" disabled>
+                        <br>
+                        
+                        <label for="tutor-email">Tutor Email: </label>
+                        <br>
+                        <input type="text" name="tutor_email" value="{{appointment.get_netid}}@princeton.edu">
                         <br>
 
                         <label for="appt-date">Appointment Date:</label>
