--- a/app/templates/admin/adminview.html
+++ b/app/templates/admin/adminview.html
@@ -43,8 +43,7 @@
                     </div>
                     <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <button class="btn warm-btn float-left prev-week-btn m-1">Previous Week Summary</button>
-                        <button class="btn warm-btn float-left weekly-summary-btn m-1">Current Week Summary</button>
+                        <button class="btn warm-btn float-left weekly-summary-btn m-1">Weekly Summary</button>
                         <button class="btn warm-btn float-left tutor-overview-btn m-1">Tutor Overview</button>
                         <button class="btn warm-btn float-left add-users-btn m-1">Add New Users</button>
                     </li>
