--- a/app/templates/admin/adminview.html
+++ b/app/templates/admin/adminview.html
@@ -46,6 +46,7 @@
                         <button class="btn warm-btn float-left weekly-summary-btn m-1">Weekly Summary</button>
                         <button class="btn warm-btn float-left tutor-overview-btn m-1">Tutor Overview</button>
                         <button class="btn warm-btn float-left add-users-btn m-1">Add New Users</button>
+                        <button class="btn warm-btn float-left view-users-btn m-1">View Users List</button>
                     </li>
                     </ul>
                 </div>
@@ -59,6 +60,7 @@
         <div id="overview-modal-container"></div>
         <div id="summary-modal-container"></div>
         <div id="add-users-modal-container"></div>
+        <div id="show-users-list-container"></div>
 
         {% include 'schedule.html' with context %}
 
