show users list

--- a/app/templates/admin/adminview.html
+++ b/app/templates/admin/adminview.html
@@ -45,6 +45,7 @@
                     <li class="list-group-item">
                         <button class="btn warm-btn float-left weekly-summary-btn m-1">Weekly Summary</button>
                         <button class="btn warm-btn float-left tutor-overview-btn m-1">Tutor Overview</button>
+                        <button class="btn warm-btn float-left users-list-btn m-1">View Users List</button>
                         <button class="btn warm-btn float-left add-users-btn m-1">Add New Users</button>
                     </li>
                     </ul>
@@ -59,6 +60,7 @@
         <div id="overview-modal-container"></div>
         <div id="summary-modal-container"></div>
         <div id="add-users-modal-container"></div>
+        <div id="users-list-container"></div>
 
         {% include 'schedule.html' with context %}
 
