--- a/app/templates/admin/weekly_summary.html
+++ b/app/templates/admin/weekly_summary.html
@@ -29,7 +29,7 @@
 
                 <div id="summary-calendar-{{week.index0}}" style="display:none">
 
-                <b>{{dates[0].strftime('%B %d')}} to {{dates[1].strftime('%B %d')}} ({{summary["Total Appointments"]}} Appointments):</b><br><br>
+                <b>{{dates[0].strftime('%B %d')}} to {{dates[1].strftime('%B %d')}} ({{summary["Total Appointments"]}} Booked Appointments):</b><br><br>
 
                 {% for tutor in summary["Total Appointments (By Tutor)"] %}
 
