--- a/app/templates/admin/adminview.html
+++ b/app/templates/admin/adminview.html
@@ -45,7 +45,7 @@
                     <li class="list-group-item">
                         <button class="btn warm-btn float-left weekly-summary-btn m-1">Weekly Summary</button>
                         <button class="btn warm-btn float-left tutor-overview-btn m-1">Tutor Overview</button>
-                        <button class="btn warm-btn float-left users-list-btn m-1">View Users List</button>
+                        <button class="btn warm-btn float-left users-list-btn m-1">View/Delete Users</button>
                         <button class="btn warm-btn float-left add-users-btn m-1">Add New Users</button>
                     </li>
                     </ul>
