--- a/app/templates/appointment_popup.html
+++ b/app/templates/appointment_popup.html
@@ -20,9 +20,9 @@
                 You can edit the date and time for this time slot below, and click "Edit Appointment" to submit your changes.
                 <br><br>
                 <form action="/edit_appointment" method="post">
-                    <label for="appt-location">Appointment Location:</label>
+                    <strong>Appointment Location:</strong>
                     <br>
-                    <input type="text" name="location" value="{{appointment.get_location()}}" disabled>
+                    {{appointment.get_location()}}
                     <br>
 
                     <label for="appt-date">Appointment Date:</label>
@@ -52,55 +52,57 @@
                 <!-- Popup for everyone else is locked/bookable  -->
                 {% else %}
                     <form action="/appointment_confirm" method="post">
-                        <label for="appt-date">Appointment Location:</label>
+                        <strong>Appointment Location:</strong>
                         <br>
-                        <input type="text" name="location" value="{{appointment.get_location()}}" disabled>
+                        {{appointment.get_location()}}
                         <br>
 
-                        <label for="appt-date">Appointment Date:</label>
+                        <strong>Appointment Date:</strong>
                         <br>
-                        <input type="date" name="appt-date" value="{{date}}" disabled>
-                        <br>
-                        
-                        <label for="appt-time">Appointment Time:</label>
-                        <br>
-                        <input type="time" name="appt-time" value="{{appointment.get_time().strftime('%H:%M')}}" disabled>
+                        {{date}}
                         <br>
                         
-                        <label for="tutor_name">Tutor Name:</label>
+                        <strong>Appointment Time:</strong>
                         <br>
-                        <input type="text" value="{{tutor.get_name()}}" disabled>
+                        {{appointment.get_time().strftime('%I:%M %p')}}
+                        <br>
+                        
+                        <strong>Tutor Name:</strong>
+                        <br>
+                        {{tutor.get_name()}}
                         <br>
                         
                         {% if user[1] == "student" and appointment.get_booked()%}
-                        <label for="tutor-email">Tutor Email: </label>
+                        <strong>Tutor Email:</strong>
                         <br>
-                        <input type="text" name="tutor_email" value="{{appointment.get_tutor_netid()}}@princeton.edu" disabled>
+                        {{appointment.get_tutor_netid()}}@princeton.edu
                         <br>
                         {% endif %}
 
                         {% if user[1] == "tutor" and appointment.get_booked()%}
-                        <label for="student-email">Student Email: </label>
+                        <strong>Student Email:</strong>
                         <br>
-                        <input type="text" name="student_email" value="{{appointment.get_student_netid()}}@princeton.edu" disabled>
+                        {{appointment.get_student_netid()}}@princeton.edu
                         <br>
                         {% endif %}
                         
-                        <label for="student_name">Student Name:</label>
+                        <strong>Student Name:</strong>
                         <br>
                         {% if user[1] != "student" or appointment.get_booked() %}
-                            <input type="text" name="student_name" value="{{student.get_name() if student else ''}}" disabled>
+                            {{student.get_name() if student else ''}}
                         {% else %}
-                            <input type="text" name="student_name" value="{{user[0]}}" disabled>
+                            {{user[0]}}
                         {% endif %}
                         <br>
             
+                        {% if user[1] != "student" or appointment.get_booked() %}
+                        <strong>Comments for Appointment:</strong>
+                        <br>
+                        {{appointment.get_comments() if appointment.get_comments() else ''}}
+                        {% else %}
                         <label for="comments">Comments for Appointment:</label>
                         <br>
-                        {% if user[1] != "student" or appointment.get_booked() %}
-                            <textarea class="textarea" name="comments" cols="30" rows="3" disabled>{{appointment.get_comments() if appointment.get_comments() else ''}}</textarea>
-                        {% else %}
-                            <textarea class="textarea" name="comments" cols="30" rows="3" maxlength="1000"></textarea>
+                        <textarea class="textarea" name="comments" cols="30" rows="3" maxlength="1000"></textarea>
                         {% endif %}
                         <br>
             
@@ -112,9 +114,7 @@
                         <input type="hidden" name="student_netid" value="{{user[2]}}">
                         <br>
                         <button class="btn warm-btn">Book Appointment</button>
-                        {% endif %}
-                        <br>
-            
+                        {% endif %}            
                     </form>
                     
                     {% if appointment.get_booked() and (user[2] == appointment.get_student_netid() or user[2] == appointment.get_tutor_netid()) %}
