--- a/app/templates/headerDynamic.html
+++ b/app/templates/headerDynamic.html
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col text-center text-black">
           <h1 class="my-2 ">ECO {{ user[1][0]|upper}}{{user[1][1:] }} Scheduling</h1>
-          <p>Welcome, {{ user[0] }}! You are logged in as a {{ user[1] }}</p>
+          <p>Welcome, {{ user[0] }}! You are logged in as {{ 'an' if user[1] == 'admin' else 'a' }} {{ user[1] }}.</p>
           {% if user[1] == "tutor" %}
           <button class="btn warm-btn edit-tutor-bio" data-tutor_netid="{{user[2]}}">View/Edit My Bio</button>
           {% elif user[1] == "student" %}
